Fix TexModule & add PreferenceModule