@@ -5,16 +5,17 @@ import com.github.hokkaydo.eplbot.module.Module;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
 import java.util.List;
 
 public class TexModule extends Module {
 
     private final TexListener texListener;
+    private final TexCommand texCommand;
 
     public TexModule(@NotNull Long guildId) {
         super(guildId);
         this.texListener = new TexListener(guildId);
+        this.texCommand  = new TexCommand(guildId);
     }
 
     @Override
@@ -24,11 +25,11 @@ public class TexModule extends Module {
 
     @Override
     public List<Command> getCommands() {
-        return Collections.emptyList();
+        return List.of(texCommand);
     }
 
     @Override
     public List<ListenerAdapter> getListeners() {
-        return Collections.singletonList(texListener);
+        return List.of(texListener, texCommand);
     }
 }
